# FastDL_Bot

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml
.github/workflows/: tests.yml
fastdl_upload_bot/: __init__.py  audit.py  config.py  discord_bot.py  extractor.py  main.py  pending.py  rate_limit.py  reports.py  sftp_publisher.py  storage.py  uploads.py  validator.py
tests/: test_audit.py  test_config.py  test_discord_permissions.py  test_pending.py  test_rate_limit.py  test_reports.py  test_sftp_publisher.py  test_storage.py  test_validator.py
